Image editor pixel values are hidden by header at the bottom. #62190

Closed
opened 2019-03-04 20:34:47 +01:00 by Paul R · 5 comments

System Information
Operating system: SUSE Leap 15.0
Graphics card: NVidia GTX 560ti (official drivers)

Blender Version
Broken: 2.80, f4677547d4, x86_64 linux, 2019-03-04 (buildbot)
Worked: 2.79

Short description of error
In 2.80, the image editor pixel values overlay is hidden when the header bar is flipped to the bottom:
2.80_pixel_overlay_hidden.png

But visible when at the top:
2.80_pixel_overlay_visible.png

2.79 shifts the overlay up so it's never obscured:
2.79_pixel_overlay_visible.png

Exact steps for others to reproduce the error

  • switch viewport to image editor
  • create image
  • confirm the pixel overlay is visible (rmb hold)
  • flip header to footer
  • rmb again - pixel overlay is now hidden/missing
**System Information** Operating system: SUSE Leap 15.0 Graphics card: NVidia GTX 560ti (official drivers) **Blender Version** Broken: 2.80, f4677547d430, x86_64 linux, 2019-03-04 (buildbot) Worked: 2.79 **Short description of error** In 2.80, the image editor pixel values overlay is hidden when the header bar is flipped to the bottom: ![2.80_pixel_overlay_hidden.png](https://archive.blender.org/developer/F6761355/2.80_pixel_overlay_hidden.png) But visible when at the top: ![2.80_pixel_overlay_visible.png](https://archive.blender.org/developer/F6761359/2.80_pixel_overlay_visible.png) 2.79 shifts the overlay up so it's never obscured: ![2.79_pixel_overlay_visible.png](https://archive.blender.org/developer/F6761362/2.79_pixel_overlay_visible.png) **Exact steps for others to reproduce the error** - switch viewport to image editor - create image - confirm the pixel overlay is visible (rmb hold) - flip header to footer - rmb again - pixel overlay is now hidden/missing
Author

Added subscriber: @intracube

Added subscriber: @intracube
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-03-05 09:40:48 +01:00
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by 6c513dc3e4

This issue was referenced by 6c513dc3e47d9944ac552f48d6bb0c16dd208074
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62190
No description provided.